--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,7 +5,7 @@
 /* STYLE ROOT */
 
 :root {
-    --bg-main: rgb(212, 205, 162);
+    --bg-main: rgb(223, 213, 195);
     --bg-buttons-active: rgb(157, 233, 160);
     --bg-buttons: #fff;
     --padding-buttons: 12px 28px 14px;
@@ -39,13 +39,13 @@ html{
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background-color: var(--purple);
+    background-color: #fff;
 } 
 ::-webkit-scrollbar-thumb {
     background: #000; 
 }
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: var(--purple); 
 }
 
 
@@ -87,18 +87,28 @@ mark {
     padding: 3px;
 }
 
-mark.number {
+div.number {
     background-color: #000;
     padding: 0.5rem;
     margin-right: 1rem;
-    color: var(--bg-main)
+    text-indent: 0;
+    color: var(--bg-main);
+    font-family: Inter;
 }
 
-article picture img,
-article picture source {
+article p {
+    margin-top: 2rem;
+}
+
+article img {
     max-height: 700px;
     filter: contrast(0.9) grayscale(1) brightness(1.2);
     mix-blend-mode: multiply;
+}
+
+article img:hover {
+    filter: none;
+    mix-blend-mode: normal;
 }
 
 
@@ -169,13 +179,8 @@ article picture source {
 
 .footer-bottom {
     background-color: #fff;
-    padding: 5px 20px;
+    padding: 5px 0;
     font-style: italic;
-}
-
-.fake-marquee {
-    width: 5000px;
-    transform:translateX(-20%);
 }
 
 .article-container {
@@ -185,6 +190,24 @@ article picture source {
 
 
 /* BUTTON COLORS */
+
+.main-article-button a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.main-article-button {
+    background-color: #000;
+    box-shadow: none;
+    transition: 0.2s ease-in-out;
+    transition-property: background-color;
+}
+
+.main-article-button:hover {
+    background-color: rgb(189, 189, 189);
+    box-shadow: none;
+    transition: 0.2s ease-in-out;
+}
 
 .green {
     background-color: rgba(157, 233, 160, var(--opacity-5))
@@ -203,6 +226,49 @@ article picture source {
 .project-landing a:hover {
     text-decoration: underline;
 }
+
+/* SWIPER GALLERIES */
+
+.swiper {
+    width: 100%;
+    height: 100%;
+    max-height: 700px;
+    background: none;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background-color: var(--bg-main);
+    
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    color: #000;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    max-height: 700px;
+    object-fit: cover;
+  }
 
 
 /* ANIMATIONS */
@@ -245,4 +311,70 @@ article picture source {
 
 
 
+/* PAGE SPECIFIC */
 
+.remappingLago-cover {
+    height: 95vh;
+    width: 100%;
+    display: block;
+    pointer-events: none;
+}
+
+
+
+
+/* Marquee styles */
+.marquee {
+    --gap: 1rem;
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    user-select: none;
+    gap: var(--gap);
+  }
+  
+  .marquee__content {
+    flex-shrink: 0;
+    display: flex;
+    justify-content: space-around;
+    gap: var(--gap);
+    min-width: 100%;
+  }
+  
+  @keyframes scroll {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(calc(-100% - var(--gap)));
+    }
+  }
+  
+  /* Pause animation when reduced-motion is set */
+  @media (prefers-reduced-motion: reduce) {
+    .marquee__content {
+      animation-play-state: running !important;
+    }
+  }
+  
+  /* Enable animation */
+  .enable-animation .marquee__content {
+    animation: scroll 30s linear infinite;
+  }
+  
+  @keyframes scroll-abs {
+    from {
+      transform: translateX(calc(100% + var(--gap)));
+    }
+    to {
+      transform: translateX(0);
+    }
+  }
+  
+  /* Other page demo styles */
+  .marquee__content > * {
+    flex: 0 0 auto;
+    color: #000;
+    text-align: center;
+  }
+  
