--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -66,11 +66,11 @@ nav {
 }
 
 
-nav div {
+/* nav div {
     margin-left: 20px;
     margin-right: 20px;
     padding: var(--padding-buttons);
-}
+} */
 
 article {
     max-width: 32em;
