--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -187,6 +187,10 @@ article img:hover {
     background-color: var(--bg-main);
 }
 
+a.inactive {
+    opacity:0.3;
+    cursor: wait;
+}
 
 
 /* BUTTON COLORS */
@@ -259,7 +263,7 @@ article img:hover {
 
   .swiper-button-next,
   .swiper-button-prev {
-    color: #000;
+    color: var(--bg-main);
   }
 
   .swiper-slide img {
@@ -363,7 +367,7 @@ article img:hover {
   
   /* Enable animation */
   .enable-animation .marquee__content {
-    animation: scroll 30s linear infinite;
+    animation: scroll 80s linear infinite;
   }
   
   @keyframes scroll-abs {
